Bug 12286 - Feedback: Align the sort dropdown right with the shopping bag

--- a/skins/retail/css/filters.css
+++ b/skins/retail/css/filters.css
@@ -9,5 +9,5 @@
     font-size: 14px;
 }
 #content .filter.sort {
-    margin-right: 62px;
+    margin-right: 52px;
 }
